<resources>
    <string name="app_name">空手</string>
    <string name="check_internet">空，检查网络连接</string>
    <string name="try_again">重新加载</string>
    <string name="error">空</string>
    <string name="long_click">长按图片进行下载</string>
    <string name="url_head">http://s.cn.bing.net</string>
    <string name="bing">来源于必应搜索</string>
    <string name="deny">拒绝权限无法下载</string>
    <string name="wallpaper_complete">已设置为壁纸</string>
    <string name="wallpaper_error">设置壁纸出错</string>
    <string name="wallpaper_set">正在设置壁纸...</string>
    <string name="load_more">加载更多...</string>
    <string name="no_more">无更多</string>
    <string name="content">内容预览</string>
    <string name="download_book">下载书籍</string>
    <string name="cancel_action">取消操作</string>
    <string name="my_collect">我的收藏</string>
    <string name="about">关于</string>
    <string name="collect">已收藏</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="part">文</string>
    <string name="word">句</string>
    <string name="no_collect">无收藏</string>
    <string name="my_book">我的书架</string>
    <string name="quit">退出</string>
    <string name="version">v1.0</string>
    <string name="author">作者</string>
    <string name="Github">Github</string>
    <string name="mail">E-mail</string>
    <string name="other">其他</string>
    <string name="qq">企鹅群: 585297184</string>
    <string name="feedback"><![CDATA[Bug&建议反馈]]></string>
    <string name="my_github">https://github.com/biloba123</string>
    <string name="my_email">biloba12345@gmail.com</string>
    <string name="feedback_">反馈</string>
    <string name="feedback_add">https://www.wenjuan.net/s/YrmAJn4/</string>
    <string name="empty_hand">空手走路，可以走很远</string>
    <string name="article">文</string>
    <string name="empty">空</string>
    <string name="complete">已添加至我的书架</string>
    <string name="part_">章节</string>
    <string name="wait">下载中，稍等</string>
    <string name="loading">加载中...</string>
    <string name="get">I get</string>
    <string name="Error">出错</string>
    <string name="back">返回</string>
    <string name="delete">确认删除</string>
    <string name="this_coll">该条收藏？</string>
</resources>
