<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBg"
    android:orientation="vertical">
    <include layout="@layout/toolbar_"/>
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/empty_hand"
            android:textColor="#424242"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_gravity="center"
            android:text="@string/version"
            android:textColor="#424242"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/div1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/author"/>
            <TextView
                android:id="@+id/github"
               style="@style/AboutText"
                android:drawableLeft="@mipmap/github"
                android:text="@string/Github"/>
            <TextView
                android:id="@+id/email"
                style="@style/AboutText"
                android:drawableLeft="@mipmap/email"
                android:text="@string/mail"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/div1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/other"/>
            <TextView
                android:id="@+id/qq"
                style="@style/AboutText"
                android:drawableLeft="@mipmap/qq"
                android:text="@string/qq"/>
            <TextView
                android:id="@+id/feedback"
                style="@style/AboutText"
                android:drawableLeft="@mipmap/feedback"
                android:text="@string/feedback"/>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
