<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:cardElevation="6dp"
        app:cardCornerRadius="2dp">
        <ImageView
            android:layout_centerInParent="true"
            android:id="@+id/book_image_view"
            android:layout_width="111dp"
            android:layout_height="160.5dp"
            android:scaleType="centerCrop"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70.5dp"
        app:cardCornerRadius="1dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bookPageBg">
        <LinearLayout
            android:id="@+id/ll"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:paddingStart="111dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:textColor="@color/bookTitleColor"/>
            <TextView
                android:id="@+id/author_text_view"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bookTextColor"/>
        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp">
            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/titleColor"
                android:text="@string/content"/>
            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:lineSpacingMultiplier="1.4"
                android:letterSpacing="0.1"
                android:background="@drawable/content_bg"
                android:ellipsize="end"
                android:maxLines="5"/>
            <TextView
                android:id="@+id/down"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:textColor="@color/titleColor"
                android:clickable="true"
                android:textSize="15sp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableEnd="@drawable/ic_action_right"
                android:text="@string/download_book"/>
            <TextView
                android:id="@+id/cancel"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:textColor="@color/titleColor"
                android:clickable="true"
                android:textSize="15sp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableEnd="@drawable/ic_action_right"
                android:text="@string/cancel_action"/>
        </LinearLayout>
    </RelativeLayout>
    </android.support.v7.widget.CardView>



</RelativeLayout>